--- a/V1/server/src/aimfire.css
+++ b/V1/server/src/aimfire.css
@@ -6,7 +6,6 @@
 }
 #colours{
   float: right;
-  background-color: grey;
 }
 .cSwitch{
   height: 30px;
@@ -14,8 +13,7 @@
   border-radius: 15px;
   display: inline-block;
   margin-left: 15px;
-  background-color: thebos;
 }
-.cSwitch .activ{
+.cSwitch.active{
   border: 4px solid white;
 }
