--- a/V3/business/src/app/app.component.html
+++ b/V3/business/src/app/app.component.html
@@ -1,4 +1,5 @@
 <h1>
-  {{title}}
+  <a href="/home">{{title}}</a>
 </h1>
 <router-outlet></router-outlet>
+<alert type="success">App running on ng2-bootstrap</alert>
