--- a/V3/business/src/app/home/home.component.css
+++ b/V3/business/src/app/home/home.component.css
@@ -1,6 +1,9 @@
 #homeImgs {
     height: auto; 
     width: auto; 
-    max-width: 300px; 
-    max-height: 300px;
+    max-width: 100px; 
+    max-height: 100px;
+}
+table {
+    min-width: 500px;
 }
