why wont you post goddamnit

--- a/V3/business/src/app/add-seller/add-seller.component.html
+++ b/V3/business/src/app/add-seller/add-seller.component.html
@@ -1,21 +1,18 @@
 <h3>
   Bæta við seljanda
 </h3>
-{{diagnostic}}
-<form (submit)="validateSeller()">
+<form action="postNewSeller()">
   <input type="text" placeholder="Nafn seljanda" required
-    [(ng-model)]="newSeller.name">
+    [(ngModel)]="newSeller.name" [ngModelOptions]="{standalone: true}">
   Nafn verslunarinnar/fyrirtækisins/aðilans sem þú ert að skrá
   (krafist)<br>
-  <input type="text" placeholder="Flokkur" [(ng-model)]="newSeller.category">
+  <input type="text" placeholder="Flokkur" 
+  [ngModelOptions]="{standalone: true}" [(ngModel)]="newSeller.category">
   Sá flokkur sem að vörur eða þjónusta seljanda falla undir
   (ekki krafist)<br>
-  <input type="text" placeholder="Myndslóð" [(ng-model)]="newSeller.imagePath">
+  <input type="text" placeholder="Myndslóð" 
+  [ngModelOptions]="{standalone: true}" [(ngModel)]="newSeller.imagePath">
   Vefslóð að mynd af seljandanum (ekki krafist) <br>
-  <p>{{newSeller.name}}</p><br>
-  <p>{{newSeller.category}}</p><br>
-  <p>{{newSeller.imagePath}}</p><br>
-
-  <input type="submit" value="Skrá seljanda" (submit)="validateSeller()">
-  <h4 *ngIf="notValidated">Nafns seljanda er krafist til að bæta við seljanda</h4>
+  <button (click)="postNewSeller()">Skrá seljanda</button>
+  <!---<h4 *ngIf="notValidated">Nafns seljanda er krafist til að bæta við seljanda</h4>!-->
 </form>
