--- a/V3/business/src/app/home/home.component.html
+++ b/V3/business/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <button><a href="/addseller">Bæta við seljanda</a></button>
-<ul>
+<button (click)="getSellers()">refresh sellers</button>
   <table class="table-striped">
     <thead><th>Nafn seljanda</th><th>Flokkur</th></thead>
     <tbody *ngFor = "let s of sellers">
@@ -10,4 +10,3 @@
       </tr>
     </tbody> 
   </table>
-</ul>
