--- a/V3/business/src/app/add-product/add-product.component.html
+++ b/V3/business/src/app/add-product/add-product.component.html
@@ -1,3 +1,21 @@
-<p>
-  add-product works!
-</p>
+<h3>
+  Bæta við vöru
+</h3>
+<form action="postNewSeller()">
+  <input type="text" placeholder="Nafn vöru" required
+    [(ngModel)]="newProduct.name" [ngModelOptions]="{standalone: true}">
+  Nafn vörunnar sem þú ert að skrá
+  (krafist)<br>
+  <input type="number" placeholder="Verð" 
+  [ngModelOptions]="{standalone: true}" [(ngModel)]="newProduct.price">
+  Verð vörunnar sem þú ert að skrá
+  (ekki krafist)<br>
+  <input type="number" placeholder="Fjöldi á lager" 
+  [ngModelOptions]="{standalone: true}" [(ngModel)]="newProduct.quantityInStock">
+  Fjöldi eintaka af vörunni sem er til á lager
+  (ekki krafist)<br>
+  <input type="text" placeholder="Myndslóð" 
+  [ngModelOptions]="{standalone: true}" [(ngModel)]="newProduct.imagePath">
+  Vefslóð að mynd af vörunni (ekki krafist) <br>
+  <button (click)="postNewProduct()">Skrá vöru</button>
+</form>
