--- a/V3/business/src/app/details/details.component.html
+++ b/V3/business/src/app/details/details.component.html
@@ -1,7 +1,7 @@
 <p>Nafn: {{name}}</p>
 <p>Bransi: {{category}}</p>
 <img id="detailsImgs" src="{{imgpath}}" alt="Picture of the seller" />
-<button><a href="/seller/:id/addproduct">Bæta við vöru</a></button>
+<button><a href="/seller/{{id}}/addproduct">Bæta við vöru</a></button>
 <tabset>
   <tab heading="Allar vörur">
     <ul>
