--- a/V3/business/src/app/add-product/add-product.component.html
+++ b/V3/business/src/app/add-product/add-product.component.html
@@ -2,20 +2,26 @@
   Bæta við vöru
 </h3>
 <form action="postNewSeller()">
-  <input type="text" placeholder="Nafn vöru" required
+  <label>Nafn vörunnar sem þú ert að skrá</label>
+  <input class="form-control" type="text" placeholder="Nafn vöru" required
     [(ngModel)]="newProduct.name" [ngModelOptions]="{standalone: true}">
-  Nafn vörunnar sem þú ert að skrá
-  (krafist)<br>
-  <input type="number" placeholder="Verð" 
+    <br>
+  <label>Verð vörunnar sem þú ert að skrá</label>
+  <input class="form-control" type="number" placeholder="Verð" 
   [ngModelOptions]="{standalone: true}" [(ngModel)]="newProduct.price">
-  Verð vörunnar sem þú ert að skrá
-  (ekki krafist)<br>
-  <input type="number" placeholder="Fjöldi á lager" 
+  <p *ngIf="newProduct.price<0"> Verð verður að vera jákvæð tala</p>
+  <br>
+  <label>Fjöldi eintaka af vörunni sem er til á lager</label>
+  <input class="form-control" type="number" placeholder="Fjöldi á lager" 
   [ngModelOptions]="{standalone: true}" [(ngModel)]="newProduct.quantityInStock">
-  Fjöldi eintaka af vörunni sem er til á lager
-  (ekki krafist)<br>
-  <input type="text" placeholder="Myndslóð" 
+  <p *ngIf="newProduct.quantityInStock<0">Lagerstaða verður að vera jákvæð tala</p>
+  <br>
+  <label>Vefslóð að mynd af vörunni</label>
+  <input class="form-control" type="text" placeholder="Myndslóð" 
   [ngModelOptions]="{standalone: true}" [(ngModel)]="newProduct.imagePath">
-  Vefslóð að mynd af vörunni (ekki krafist) <br>
+  <br>
   <button (click)="postNewProduct()">Skrá vöru</button>
+  <h3 *ngIf="notValid">
+    Vinsamlegast farðu yfir að allar upplýsingar hafi verið rétt skráðar.
+  </h3>
 </form>
