why wont postedProduct be anything but undefined

--- a/V3/business/src/app/add-product/add-product.component.html
+++ b/V3/business/src/app/add-product/add-product.component.html
@@ -24,4 +24,5 @@
   <h3 *ngIf="notValid">
     Vinsamlegast farðu yfir að allar upplýsingar hafi verið rétt skráðar.
   </h3>
+  <h1 *ngIf="alreadyPosted">Þú varst rétt að enda við að skrá þessa ;)</h1>
 </form>
