--- a/V3/business/src/app/edit-seller/edit-seller.component.html
+++ b/V3/business/src/app/edit-seller/edit-seller.component.html
@@ -3,8 +3,8 @@
 </h3>
 <form action="postNewSeller()">
   <label>Breytt nafn verslunarinnar/fyrirtækisins/aðilans</label>
-  <input class="form-control" type="text" placeholder="Nafn seljanda" required
-    [(ngModel)]="seller.name" [ngModelOptions]="{standalone: true}">
+  <input class="form-control" type="text" placeholder="Nafn seljanda" 
+  required [(ngModel)]="seller.name" [ngModelOptions]="{standalone: true}">
   <br>
   <label>Nýr flokkur</label>
   <input class="form-control" type="text" placeholder="Flokkur" 
