--- a/V3/business/src/app/details/details.component.html
+++ b/V3/business/src/app/details/details.component.html
@@ -8,7 +8,7 @@
     <ul>
       <li *ngFor = "let p of productlist">
         {{p.name}}  <button><a href="/seller/{{id}}/editproduct/{{p.id}}">Breyta vöru</a></button><br>
-        Verð: {{p.price}} kr.
+        Verð: {{p.price}} kr. <br>
         <p *ngIf="p.quantityInStock>0">Á lager: {{p.quantityInStock}}</p>
         <p *ngIf="p.quantityInStock==0">Varan er uppseld!</p>
         <img id="prodImgs" src="{{p.imagePath}}" alt="Image of the product" />
