--- a/V3/business/src/app/details/details.component.html
+++ b/V3/business/src/app/details/details.component.html
@@ -1,3 +1,4 @@
+<div *ngIf="!leaveThisPage">
 <p>Nafn: {{name}}</p>
 <p>Bransi: {{category}}</p>
 <img id="detailsImgs" src="{{imgpath}}" alt="Picture of the seller" />
@@ -19,3 +20,5 @@
     <app-top-ten></app-top-ten>
   </tab>
 </tabset>
+</div>
+<h1 *ngIf="leaveThisPage">404 Seller not found!</h1>
