--- a/V3/business/src/app/home/home.component.html
+++ b/V3/business/src/app/home/home.component.html
@@ -3,8 +3,8 @@
     <thead><th>Nafn seljanda</th><th>Flokkur</th></thead>
     <tbody *ngFor = "let s of sellers">
       <tr>
-      <div class ="col-sm-4"><th><a href="/seller/{{s.id}}">{{s.name}}</a></th></div>
-      <div class ="col-sm-5"><th><a href="/seller/{{s.id}}">{{s.category}}</a></th></div>
+      <th><a href="/seller/{{s.id}}">{{s.name}}</a></th>
+      <th><a href="/seller/{{s.id}}">{{s.category}}</a></th>
       <!---<th><a href="/seller/{{s.id}}"><img id="homeImgs" src="{{s.imagePath}}" alt="Image of the seller" /></a></th !-->
       </tr>
     </tbody>
