--- a/V3/business/src/app/details/details.component.html
+++ b/V3/business/src/app/details/details.component.html
@@ -1,4 +1,5 @@
 <div *ngIf="!leaveThisPage">
+  <div class="col-md-6">
 <p>Nafn: {{name}}</p>
 <p>Bransi: {{category}}</p>
 <img id="detailsImgs" src="{{imgpath}}" alt="Picture of the seller" />
@@ -16,10 +17,11 @@
         <img id="prodImgs" src="{{p.imagePath}}" alt="Image of the product" />
       </li>
     </ul>
-  </tab>  
+  </tab>
   <tab heading="Topp tíu vörur" onselect="console.log('what the shit, man\n')">
     <app-top-ten></app-top-ten>
   </tab>
 </tabset>
+</div>
 </div>
 <h1 *ngIf="leaveThisPage">404 Seller not found!</h1>
