--- a/V3/business/src/app/details/details.component.html
+++ b/V3/business/src/app/details/details.component.html
@@ -11,7 +11,7 @@
     <div class="row">
     <ul>
       <li *ngFor = "let p of productlist">
-        <div class="col-md-3">.
+        <div class="col-md-3">
         {{p.name}}  <button><a href="/seller/{{id}}/editproduct/{{p.id}}">Breyta vöru</a></button><br>
         Verð: {{p.price}} kr. <br>
         <p *ngIf="p.quantityInStock>0">Á lager: {{p.quantityInStock}}</p>
