not to be pushed

--- a/V3/business/src/app/home/home.component.html
+++ b/V3/business/src/app/home/home.component.html
@@ -4,7 +4,7 @@
     <tbody *ngFor = "let s of sellers">
       <tr>
       <th><a href="/seller/{{s.id}}">{{s.name}}</a></th>
-      <th><a href="/seller/{{s.id}}">{{s.category}}</a></th>
+      <th><a href="{{s.category}}">{{s.category}}</a></th>
       <!---<th><a href="/seller/{{s.id}}"><img id="homeImgs" src="{{s.imagePath}}" alt="Image of the seller" /></a></th !-->
       </tr>
     </tbody>
