--- a/V3/business/src/app/top-ten/top-ten.component.html
+++ b/V3/business/src/app/top-ten/top-ten.component.html
@@ -1,10 +1,16 @@
 <h4 *ngIf="noProducts">Seljandi hefur engar vörur skráðar</h4>
+<div class="container-fluid">
+<div class="row">
 <ul>
   <li *ngFor = "let p of topProducts">
+    <div class="col-xs-6" class="col-md-4">
     {{p.name}}<br>
     Verð: {{p.price}} kr.
     <p *ngIf="p.quantityInStock>0">Á lager: {{p.quantityInStock}}</p>
     <p *ngIf="p.quantityInStock==0">Varan er uppseld!</p>
     <img id="prodImgs" src="{{p.imagePath}}" alt="Image of the product" />
+  </div>
   </li>
 </ul>
+</div>
+</div>
