--- a/V3/business/src/app/top-ten/top-ten.component.html
+++ b/V3/business/src/app/top-ten/top-ten.component.html
@@ -1,7 +1,7 @@
 <h4 *ngIf="noProducts">Seljandi hefur engar vörur skráðar</h4>
 <div class="container-fluid">
 <div class="row">
-<ul>
+<ul style="list-style: none;">
   <li *ngFor = "let p of topProducts">
     <div class="col-xs-6" class="col-md-4">
     {{p.name}}<br>
