--- a/V2/gaspr/src/app/login/login.component.html
+++ b/V2/gaspr/src/app/login/login.component.html
@@ -1,3 +1,11 @@
-<p>
-  login works!
-</p>
+<!--Adapted from bootsnipp.com-->
+<div class = "container">
+	<div class="wrapper">
+		<form action="#" name="Login_Form" class="form-signin">       
+		    <h3 class="form-signin-heading">Please choose a unique nickname</h3>			  
+			  <input type="text" class="form-control" name="Username" placeholder="Nickname" required="" autofocus="" />
+			 
+			  <button class="btn btn-lg btn-primary btn-block"  name="Submit" value="Login" type="Submit">Login</button>  			
+		</form>			
+	</div>
+</div>
