--- a/V2/gaspr/src/app/room/room.component.html
+++ b/V2/gaspr/src/app/room/room.component.html
@@ -1,8 +1,10 @@
 <h2>
   {{room}}
 </h2>
+<h3><a (click)="leaveRoom()" [routerLink]="['/home']">Back</a></h3>
 <form action="checkPassword()" *ngIf="!validated && passwordRequired">
-  <input [(ngModel)]="pass" [ngModelOptions]="{standalone: true}" placeholder="Password" />
+  <input [(ngModel)]="pass" [ngModelOptions]="{standalone: true}"
+  placeholder="Password" required autofocus />
   <button (click)="checkPassword()">validate</button>
 </form>
 <div *ngIf="validated">
@@ -11,6 +13,6 @@
   </div>
   <form (submit)="sendMsg()">
     <input [(ngModel)]="message" [ngModelOptions]="{standalone: true}" />
-    <button (click)="sendMsg()">send</button>
+    <button type="button" (click)="sendMsg()">send</button>
   </form>
 </div>
